# demo-ls

./: .tool-versions  Cargo.toml
src/: diagnostics.rs  lib.rs  main.rs  pool.rs  project.rs
src/diagnostics/: pool.rs
src/project/: builtin_plugins.rs  crate_model.rs  plugins.rs
