[package]
name = "demo-ls"
version = "0.1.0"
edition = "2024"

[dependencies]
cairo-lang-utils = "2.11.4"
cairo-lang-filesystem = "2.11.4"
cairo-lang-semantic = "2.11.4"
cairo-lang-test-plugin = "2.11.4"
cairo-lang-starknet = "2.11.4"
cairo-lang-executable = "2.11.4"
cairo-lang-defs = "2.11.4"
cairo-lang-syntax = "2.11.4"
cairo-lang-compiler = "2.11.4"
cairo-lang-parser = "2.11.4"
cairo-lang-lowering = "2.11.4"
cairo-lang-diagnostics = "2.11.4"

smol_str = "0.2"
clap = { version = "4.5", features = ["derive"] }
crossbeam-channel = "0.5"
serde = { version = "1.0", features = ["derive"] }
anyhow = "1.0"
itertools = "0.14"
serde_json = "1.0"
scarb-metadata = "1.15"
salsa = { package = "rust-analyzer-salsa", version = "0.17.0-pre.6" }
jod-thread = "1.0"